<resources>
    <string name="app_name">Donation Machine</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="search_non_profits">Search Non-Profits</string>
    <string name="my_donations">My Donations</string>
    <string name="profile_details">Profile details</string>
    <string name="profile_pic">Profile pic</string>
    <string name="non_profit_name">Non-Profit Name</string>
    <string name="profile">Profile</string>
    <string name="past_donations">Past Donations</string>
    <string name="messages">Messages</string>
    <string name="search_messages">Search Messages</string>
    <string name="donate_title">Donation Machine</string>
    <string name="donor_app">Donor App</string>
    <string name="email">E-Mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">No Account? Click Here!</string>
    <string name="account_type">Account Type</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="favourites">Favourites</string>
    <string name="join">Join Us!</string>
    <string name="search_donos">Search Donations</string>
    <string name="search_npos">Search Non-Profits</string>
    <string name="content">post details</string>
    <string name="date">date</string>
    <string name="search_app">Search Donation Machine</string>
    <string name="listing">Listing</string>
    <string name="NPOlisting">Non-Profit Listing</string>
    <string name="blank"> </string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>
    <string name="write_a_post">Post</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_login">Log In</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="no_results">No Results</string>
</resources>