<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_orange">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="350dp"
        android:text="@string/donor_app"
        android:textAlignment="center"
        android:textSize="40sp"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/light_blue"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_margin="30dp"
        android:hint="@string/username"
        android:background="@color/grey"
        android:textColorHint="@color/dark_blue"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_margin="30dp"
        android:hint="@string/password"
        android:background="@color/grey"
        android:textColorHint="@color/dark_blue"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:background="@color/grey"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/dark_orange" />
</androidx.constraintlayout.widget.ConstraintLayout>