<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="ExtraText">
    !--tools:context="app.src.main.java.com.example.a4p02app.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/botBord"
        app:layout_constraintTop_toBottomOf="@+id/headerline"
        android:layout_margin="5dp">

        <ListView
            android:id="@+id/homeList"
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:background="@color/white"
            android:divider="@color/dark_blue"
            android:dividerHeight="3dp"
            android:listSelector="@color/light_orange"
            android:padding="10sp"/>
    </LinearLayout>
    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/light_blue"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/headerline"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="@id/header" />

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/light_blue"
        android:contentDescription="@string/todo"
        android:onClick="reveal"
        android:src="@drawable/ic_round_search_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/donate_title"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/searcher"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@color/light_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/headerline"
        >

        <ImageButton
            android:id="@+id/closerArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@color/light_blue"
            android:contentDescription="@string/todo"
            android:onClick="reveal"
            android:src="@drawable/ic_round_keyboard_arrow_up_24"
            app:layout_constraintEnd_toEndOf="parent" />

        <SearchView
            android:id="@+id/searchbar"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="15dp"
            android:background="@color/light_orange"
            android:queryHint="@string/search_non_profits"
            android:iconifiedByDefault="false"
            android:searchIcon="@null"
            android:queryBackground="@color/light_orange"
            android:textAlignment="textStart"
            />
    </RelativeLayout>

    <View
        android:id="@+id/botBord"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@id/botNav" />

    <View
        android:id="@+id/botNav"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/light_orange"
        app:layout_constraintBottom_toBottomOf="parent" />


    <ImageButton
        android:id="@+id/homer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botBord"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toStartOf="@id/profile"
        android:background="@color/light_orange"
        android:src="@drawable/ic_round_home_page"
        android:onClick="goHome"
        android:contentDescription="@string/todo"
        />

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botBord"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toStartOf="@id/info"
        android:background="@color/light_orange"
        android:src="@drawable/ic_round_person_24"
        android:onClick="goProfile"
        android:contentDescription="@string/todo" />


    <ImageButton
        android:id="@+id/favs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botBord"
        android:layout_marginTop="5dp"
        android:layout_marginStart="22dp"
        app:layout_constraintStart_toEndOf="@id/info"
        android:src="@drawable/ic_round_favorite_24"
        android:background="@color/light_orange"
        android:onClick="goFavs"
        android:contentDescription="@string/todo"/>


    <ImageButton
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botBord"
        android:layout_marginTop="5dp"
        android:layout_marginStart="22dp"
        app:layout_constraintStart_toEndOf="@id/favs"
        android:src="@drawable/ic_round_edit_24"
        android:background="@color/light_orange"
        android:onClick="makePost"
        android:contentDescription="@string/todo"
        />
    <ImageButton
        android:id="@+id/info"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/botBord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@id/favs"
        android:src="@drawable/ic_round_info_24"
        android:background="@color/light_orange"
        android:onClick="goInfo"
        android:contentDescription="@string/todo"
        />

    <TextView
        android:id="@+id/homeword"
        android:layout_width="55dp"
        android:layout_height="15dp"
        app:layout_constraintTop_toBottomOf="@+id/homer"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:layout_marginEnd="127dp"
        android:text="@string/home"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textColor="@color/dark_orange"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>