<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/light_blue"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/headerline"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="@id/header" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/profile"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_blue"
        android:onClick="goBack"
        android:src="@drawable/ic_round_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/profilePart2"
        app:layout_constraintEnd_toEndOf="@+id/headerline"
        app:layout_constraintStart_toStartOf="@+id/headerline"
        app:layout_constraintTop_toBottomOf="@+id/headerline"
        app:layout_constraintVertical_bias="0.3">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/blank_profile_picture" />

        <ImageView
            android:id="@+id/circle_crop"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/circle_crop" />

    </FrameLayout>

    <TextView
        android:id="@+id/profilePart2"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/purple_200"
        android:maxLines="10"
        android:text="editable profile details"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/botBord"
        app:layout_constraintEnd_toEndOf="@+id/frame"
        app:layout_constraintStart_toStartOf="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/headerline"
        app:layout_constraintVertical_bias="0.41000003" />

    <View
        android:id="@+id/botBord"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@id/botNav" />

    <View
        android:id="@+id/botNav"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/light_orange"
        app:layout_constraintBottom_toBottomOf="parent" />


    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/light_blue"
        android:elevation="20dp"
        android:onClick="goDonos"
        android:padding="5dp"
        android:rotationY="0"
        android:text="@string/past_donations"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@id/botBord"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePart2" />

    <Button
        android:id="@+id/messages"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/light_blue"
        android:elevation="20dp"
        android:onClick="goMessages"
        android:padding="5dp"
        android:text="@string/messages"
        android:textColor="@color/dark_blue"
        android:bottomRightRadius="45dp"
        android:bottomLeftRadius="45dp"
        android:topRightRadius="45dp"
        android:topLeftRadius="45dp"
        app:layout_constraintBottom_toTopOf="@id/botBord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/profilePart2" />

    <ImageButton
        android:id="@+id/homer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="22dp"
        android:background="@color/light_orange"
        android:contentDescription="@string/todo"
        android:onClick="goHome"
        android:src="@drawable/ic_round_home_24"
        app:layout_constraintEnd_toStartOf="@id/profile"
        app:layout_constraintTop_toBottomOf="@id/botBord" />

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="22dp"
        android:background="@color/light_orange"
        android:contentDescription="@string/todo"
        android:onClick="goProfile"
        android:src="@drawable/ic_round_person_page"
        app:layout_constraintEnd_toStartOf="@id/info"
        app:layout_constraintTop_toBottomOf="@id/botBord" />


    <ImageButton
        android:id="@+id/favs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="5dp"
        android:background="@color/light_orange"
        android:contentDescription="@string/todo"
        android:onClick="goFavs"
        android:src="@drawable/ic_round_favorite_24"
        app:layout_constraintStart_toEndOf="@id/info"
        app:layout_constraintTop_toBottomOf="@id/botBord" />


    <ImageButton
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="5dp"
        android:background="@color/light_orange"
        android:contentDescription="@string/todo"
        android:onClick="makePost"
        android:src="@drawable/ic_round_edit_24"
        app:layout_constraintStart_toEndOf="@id/favs"
        app:layout_constraintTop_toBottomOf="@id/botBord" />

    <ImageButton
        android:id="@+id/info"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:background="@color/light_orange"
        android:contentDescription="@string/todo"
        android:onClick="goNPOList"
        android:src="@drawable/ic_round_import_contacts_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/favs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botBord" />

    <TextView
        android:id="@+id/homeword"
        android:layout_width="55dp"
        android:layout_height="15dp"
        android:layout_marginEnd="49dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/dark_orange"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/homer" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goUpdateProfile"
        android:shadowColor="@color/black"
        android:shadowDx="40"
        android:shadowDy="40"
        android:shadowRadius="50"
        android:text="Edit Account"
        app:layout_constraintBottom_toTopOf="@+id/botNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profilePart2"
        app:layout_constraintTop_toBottomOf="@+id/profilePart2"
        app:layout_constraintVertical_bias="0.04000002" />

</androidx.constraintlayout.widget.ConstraintLayout>